# helios

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
crates/: Cargo.toml
crates/.cargo/: config.toml
crates/bigalloc-user/: Cargo.toml  build.rs  linker.ld
crates/bigalloc-user/src/: main.rs
crates/cat-user/: Cargo.toml  build.rs  linker.ld
crates/cat-user/src/: main.rs
crates/helios-std/: Cargo.toml  README.md
crates/helios-std/src/: graph.rs  heap.rs  io.rs  lib.rs  prelude.rs  sys.rs  task.rs
crates/hello-user/: Cargo.toml  build.rs
crates/hello-user/src/: main.rs
crates/ls-user/: Cargo.toml  build.rs
crates/ls-user/src/: main.rs
crates/mmap-user/: Cargo.toml  linker.ld
crates/mmap-user/src/: main.rs
docs/: README.md
docs/design/: capability-edges.md  philosophy.md  userspace-tiers.md
docs/design/proposals/: post-m32-directions.md
docs/userspace/: porting.md  rust-std.md
doom/: helios_libc.c
doom/include/: ctype.h  dirent.h  errno.h  fcntl.h  inttypes.h  limits.h  math.h  stdio.h  stdlib.h  string.h  strings.h  unistd.h
doom/include/sys/: stat.h  time.h  types.h
screenshots/: capture-tcp.py  m31-hello-uart.txt  m31-m32-uart.txt  m32-ls-cat-uart.txt  m32-tools-uart.txt  m33-mmap-uart.txt  m33.5-uart.txt  m34-ls-labels-uart.txt  run-and-capture.py
src/: alloc_impl.rs  console.rs  doom.rs  framebuffer.rs  fwcfg.rs  ipc.rs  main.rs  memfuncs.rs  panic.rs  ramfb.rs  shell.rs  trap.rs  uart.rs  user.rs
src/arch/riscv64/: boot.S  linker.ld  mod.rs
src/graph/: compute.rs  init.rs  live.rs  mod.rs  navigator.rs  persist.rs  query.rs  render.rs  user.rs  window.rs
src/mm/: mod.rs  page_table.rs
src/net/: arp.rs  dashboard.rs  eth.rs  http.rs  icmp.rs  ip.rs  json.rs  mod.rs  tcp.rs
src/task/: mod.rs
src/virtio/: blk.rs  gpu.rs  input.rs  mmio.rs  mod.rs  net.rs  tablet.rs
