[package]
name = "helios"
version = "0.1.0"
edition = "2021"
authors = ["Sol"]
description = "Helios — an OS where everything is a memory"
build = "build.rs"

[[bin]]
name = "helios"
path = "src/main.rs"

[profile.release]
opt-level = 2
lto = true
panic = "abort"

[profile.dev]
panic = "abort"

# The root crate (the kernel) is standalone. Userspace libraries and
# binaries live in their own Cargo workspace at `crates/` — see
# `crates/Cargo.toml`. The two workspaces are deliberately separate
# because they use different linker scripts: the kernel links at
# 0x80200000 (OpenSBI drop-in), userspace links at 0x40000000
# (USER_CODE_BASE). `build.rs` invokes cargo inside `crates/` to compile
# the user binaries and embeds the raw bytes into the kernel image via
# include_bytes!.
[workspace]
# Keep crates/ out — it's a separate nested workspace.
exclude = ["crates"]
